@@ -207,7 +207,7 @@ GSS_CALLCONV gss_import_cred(
 
                         local_result = GLOBUS_GSI_SYSCONFIG_CHECK_CERTFILE(
                             cert_path);
-
+#ifndef WIN32
                         if (local_result != GLOBUS_SUCCESS
                             && getuid() == 0
                             && globus_i_gsi_gssapi_vhost_cred_owner != 0)
@@ -217,6 +217,7 @@ GSS_CALLCONV gss_import_cred(
                                     cert_path,
                                     globus_i_gsi_gssapi_vhost_cred_owner);
                         }
+#endif
                         if (local_result != GLOBUS_SUCCESS)
                         {
                             *minor_status = local_result;
@@ -244,6 +245,7 @@ GSS_CALLCONV gss_import_cred(
 
                         local_result = GLOBUS_GSI_SYSCONFIG_CHECK_KEYFILE(
                             key_path);
+#ifndef WIN32
                         if (local_result != GLOBUS_SUCCESS
                             && getuid() == 0
                             && globus_i_gsi_gssapi_vhost_cred_owner != 0)
@@ -253,6 +255,7 @@ GSS_CALLCONV gss_import_cred(
                                     key_path,
                                     globus_i_gsi_gssapi_vhost_cred_owner);
                         }
+#endif
                         if (local_result != GLOBUS_SUCCESS)
                         {
                             *minor_status = local_result;
