@@ -1,3 +1,9 @@
+globus-gssapi-gsi (13.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * don't check uid on win
+
+ -- Globus Toolkit <support@globus.org>  Thu, 25 Jan 2018 12:41:10 -0600
+
 globus-gssapi-gsi (13.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Improve vhost support
